--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s1/1.png" alt="" />
+            <img src="asset/GamePlay/s1/1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s1/2.png" alt="" />
+            <img src="asset/GamePlay/s1/2.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s1/3.png" alt="" />
+            <img src="asset/GamePlay/s1/3.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s1/4.png" alt="" />
+            <img src="asset/GamePlay/s1/4.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s1/5.png" alt="" />
+            <img src="asset/GamePlay/s1/5.png" alt="" />
           </div>
           ...
         </div>
@@ -187,19 +187,19 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s2/1.png" alt="" />
+            <img src="asset/GamePlay/s2/1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s2/2.png" alt="" />
+            <img src="asset/GamePlay/s2/2.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s2/3.png" alt="" />
+            <img src="asset/GamePlay/s2/3.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s2/4.png" alt="" />
+            <img src="asset/GamePlay/s2/4.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="/asset/GamePlay/s2/5.png" alt="" />
+            <img src="asset/GamePlay/s2/5.png" alt="" />
           </div>
           ...
         </div>
@@ -308,7 +308,7 @@
 
     <br /><br /><br /><br /><br /><br /><br /><br />
     <div class="px-10">
-      <img class="" src="/asset/history.png" alt="" />
+      <img class="" src="asset/history.png" alt="" />
     </div>
 
     <!-- footer -->
@@ -390,6 +390,6 @@
 
     <!-- javascript sliders -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/src/script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
