--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
-    <title>Game Setan Official</title>
+    <title>Game Setan Official | By ARTWORKHEX</title>
   </head>
 
   <body class="text-white bg-zinc-800 overflow-x-hidden">
